Fixed md formatting

--- a/Phase1/week_2/lab/begin.ipynb
+++ b/Phase1/week_2/lab/begin.ipynb
@@ -51,7 +51,7 @@
     "```\n",
     "Order size: 10\n",
     "32.5\n",
-    "``"
+    "```"
    ]
   },
   {
@@ -73,12 +73,15 @@
     "\n",
     "Create a sequence of calls to built-in methods and conditionals to correctly format & print a user's full-name using their first name, middle name, and last name stored in variables\n",
     "\n",
-    "example output when \n",
+    "Example: \n",
+    "```\n",
     "fname = \"farukh\" \n",
     "mname = \"b\" \n",
     "lname = \"saIDMUratov\"\n",
     "```\n",
-    "Farukh B Saidmuratov"
+    "```\n",
+    "Farukh B Saidmuratov\n",
+    "```"
    ]
   },
   {
