lowercased directory in alingment with pep8

--- a/Phase1/week_3/loops_conditionals_II/notes.ipynb
+++ b/Phase1/week_3/loops_conditionals_II/notes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For-loops\n",
+    "## For-loops\n",
     "\n",
     "But there's always an alternative in programming. In this case our alternative are for-loops. While these accomplish the exact same goal in roughly the same process, notice how the for-loop doesn't necessitate the creation of \"x\", and we do not need to explictly tell the for-loop to increment by 1. \n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,6 @@
       "1\n",
       "2\n",
       "3\n",
-      "4\n",
       "4\n"
      ]
     }
@@ -112,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Syntax\n",
+    "## Syntax\n",
     "\n",
     "As long as the structure of your for-loop remains as `for var in iterable:`, your for-loop will function.\n",
     "\n",
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,16 +142,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Iterable\n",
+    "## Iterable\n",
     "\n",
     "Most importantly however, let's discuss the \"iterable\" part of our loop. Let's try printing out the \"range\" part of the function by itself."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 5)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Not too helpful, let's expand this\n",
     "range(5)"
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +179,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +200,13 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Always starts at 0, and ends at -1 from the input\n",
+    "# Always starts at 0, and ends at n-1 from the input \"n\"\n",
     "list(range(10))"
    ]
   },
@@ -204,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Iterable continued.\n",
+    "## Iterable continued.\n",
     "\n",
     "So that's how the variable in our loop gets each number from 0 to the last number - 1. It simply walks through this sequence and executes the body of this for each number listed.\n",
     "\n",
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +232,7 @@
        "[4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +253,7 @@
        "[4, 6, 8]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +274,7 @@
        "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,16 +288,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prompt\n",
+    "## Translating code\n",
     "\n",
-    "Is there another way to do the following?"
+    "This exploration of for-loops reveals that there are a lot of things in programming that accomplish the same thing. In fact there is a lot of overlap between programming languages as well! We will later on figure out why we choose certain concepts over others when it comes to solving problems."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Notice how this while-loop\n",
+    "x = 2\n",
+    "while x < 10:\n",
+    "    print(x)\n",
+    "    x += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# does the same exact thing as this for-loop\n",
+    "for x in range(2, 10, 2):\n",
+    "  print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompt\n",
+    "\n",
+    "What will result from the following block of code?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it's a cat\n"
+     ]
+    }
+   ],
    "source": [
     "four_legs = True\n",
     "furry = True\n",
@@ -305,7 +378,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nested conditionals\n",
+    "## Boolean statements review\n",
+    "\n",
+    "Logic is inseperable from coding, and therefore you will be dealing with it constantly. Let's go over a couple of commonly seen logical statements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## And Statements\n",
+    "\n",
+    "\"And\" statements, aka conjunctions, are multiple true or false statements joined together by the \"and\" logical operator. We decompose these strings of or true or false statements into one true or false definition. Let's consider the following\n",
+    "\n",
+    "```\n",
+    "(The Earth is a planet) and (the moon is made out of cheese).\n",
+    "```\n",
+    "\n",
+    "What is the overall \"truth-value\" of this statement? Is it overall true or overall false?\n",
+    "\n",
+    "Without a doubt false. Even though the first statement is true, I am implying that both statements are true by using that \"and.\" Everything must be true for this entire statement to be true as well! \n",
+    "\n",
+    "In this case our false-statements are \"sticky.\" It does not matter how many true statements you have joined together by \"ands\", if you include one false statement, it becomes false.\n",
+    "\n",
+    "```\n",
+    "True and True and True and True and ... and False == False\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Or Statements\n",
+    "\n",
+    "\"Or\" statements, aka disjunctions, are multiple true or false statements joined together by the \"or\" logical operator. We decompose these strings of or true or false statements into one true or false definition. Let's consider the following\n",
+    "\n",
+    "```\n",
+    "(The Earth is a planet) or (the moon is made out of cheese).\n",
+    "```\n",
+    "\n",
+    "What is the overall \"truth-value\" of this statement? Is it overall true or overall false?\n",
+    "\n",
+    "In this case it is true! Even though the second statement is false, I am implying that only one statement is true by using that \"or.\" \n",
+    "\n",
+    "In this case our true-statements are \"sticky.\" It does not matter how many false statements you have joined together by \"ors\", if you include one true statement, it becomes true.\n",
+    "\n",
+    "```\n",
+    "False or False or False or False or ... or True == True\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (Optional) What does \"boolean\" even mean?\n",
+    "\n",
+    "George Boole was an English, largelely self-taught mathematician from the 1800s. He formalized the field of [algebraic logic](https://en.wikipedia.org/wiki/Algebraic_logic), which is what we use when writing our conditional statements. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An alternative: nested conditionals\n",
     "\n",
     "Here we can decompose our code into a nested conditional. A nested conditional is simply a conditional within another conditional, and accomplishes the same thing as the logical \"and.\" This is sometimes easier to read than stringing together logical statements.\n",
     "\n",
