--- a/Phase1/week_3/loops_conditionals_II/task.ipynb
+++ b/Phase1/week_3/loops_conditionals_II/task.ipynb
@@ -4,35 +4,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop task 1"
+    "## For-Loop\n",
+    "\n",
+    "Create a for-loop that prints out all numbers from 5 to 15\n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "5\n",
+    "6\n",
+    "6\n",
+    "7\n",
+    "8\n",
+    "9\n",
+    "10\n",
+    "11\n",
+    "12\n",
+    "13\n",
+    "14\n",
+    "15\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write solution here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop task 2"
+    "## Even For-Loop\n",
+    "\n",
+    "Create a for-loop that prints out all even numbers from 1 to 10\n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "2\n",
+    "4\n",
+    "6\n",
+    "8\n",
+    "10\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write solution here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop task 3"
+    "## Loop Translation\n",
+    "\n",
+    "Translate the following while-loop into a for-loop. Ensure that the for-loop does the same exact thing as the while-loop!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# while-loop\n",
+    "\n",
+    "x = 20\n",
+    "while x > 0:\n",
+    "    print(x)\n",
+    "    x = x - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for-loop"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nested Conditionals 1"
+    "## Rock, paper, scissors\n",
+    "\n",
+    "Create a program that simulates the game \"rock, paper, scissors.\" You will take in two inputs, one from player 1, and one from player 2, and then compare them to each other. You will code in the rules of the game using conditionals and print out who the subsequent user is.\n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "player 1: rock\n",
+    "player 2: scissors\n",
+    "\n",
+    "player 1 wins\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert solution here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nested Conditionals 2"
+    "## Nested Conditionals Translation\n",
+    "\n",
+    "Translate the following conjunction into a nested conditional. Ensure that the conjunction does the same exact thing as the nested conditional!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on your preferences, you should watch Rubber\n"
+     ]
+    }
+   ],
+   "source": [
+    "horror_pref = True\n",
+    "funny_pref = True\n",
+    "sad_pref = False\n",
+    "\n",
+    "if horror_pref and funny_pref and not sad_pref:\n",
+    "    movie = \"Rubber\"\n",
+    "elif horror_pref and not funny_pref and sad_pref:\n",
+    "    movie = \"Hereditary\"\n",
+    "elif not horror_pref and funny_pref and sad_pref:\n",
+    "    movie = \"The Truman Show\"\n",
+    "\n",
+    "print(\"Based on your preferences, you should watch\", movie)"
    ]
   },
   {
@@ -43,11 +191,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Bonus 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -57,7 +219,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
