Completed day1 task

--- a/Phase1/week_3/loops_conditionals_II/task.ipynb
+++ b/Phase1/week_3/loops_conditionals_II/task.ipynb
@@ -65,6 +65,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Backwards For-Loop\n",
+    "\n",
+    "Create a loop that goes backwards from 50 to 30 by 3.\n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "50\n",
+    "47\n",
+    "44\n",
+    "41\n",
+    "38\n",
+    "35\n",
+    "32\n",
+    "```\n",
+    "\n",
+    "Recall how we can change the `range()` function to start and end any point we desire."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loop Translation\n",
     "\n",
     "Translate the following while-loop into a for-loop. Ensure that the for-loop does the same exact thing as the while-loop!"
@@ -117,7 +148,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for-loop"
+    "# write for-loop here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FizzBuzz Pt. 2\n",
+    "\n",
+    "Using the fizzbuzz code from before, rewrite your conditonal in such a way that it is **nested** instead of joined with the conjunction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let's try building a program that will print Fizz, if the number is divisble by 3, Buzz, if the number is divisible by 5, \n",
+    "# and FizzBuzz, if its divisible by both 5 & 3, for numbers between 1 and 100.\n",
+    "x = 1\n",
+    "\n",
+    "while x <= 100:\n",
+    "    # Rewrite solution here\n",
+    "    if x%5==0 and x%3==0:\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif x%5==0:\n",
+    "        print(\"Buzz\")\n",
+    "    elif x%3==0:\n",
+    "        print(\"Fizz\")\n",
+    "    x += 1"
    ]
   },
   {
@@ -143,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert solution here"
+    "# write solution here"
    ]
   },
   {
@@ -184,10 +245,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write nested conditionals here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus 1"
+    "## Calculator Pt. 2\n",
+    "\n",
+    "Continue developing your calculator from last week. This time, instead of just calculating sum and difference, ask the user which operator they want to use. Use condtionals in order to check their choice and apply the appropriate operation.\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "number 1: 10\n",
+    "number 2: 50\n",
+    "operation: *\n",
+    "\n",
+    "result: 500\n",
+    "```\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "number 1: 45\n",
+    "number 2: 15\n",
+    "operation: -\n",
+    "\n",
+    "result: 30\n",
+    "```"
    ]
   },
   {
@@ -195,13 +285,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your solution here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus 2"
+    "## Plain Stairs\n",
+    "\n",
+    "Create an algorithm that takes in a users input, and prints out hashtag stairs once again. However this time, the levels will only increase be increasing by 1. Try to use a for-loop for this challenge!\n",
+    "\n",
+    "Example output\n",
+    "```\n",
+    "input the number of levels: 5\n",
+    "\n",
+    "#\n",
+    "##\n",
+    "###\n",
+    "####\n",
+    "#####\n",
+    "```\n",
+    "\n",
+    "Example output\n",
+    "```\n",
+    "input the number of levels: 3\n",
+    "\n",
+    "#\n",
+    "##\n",
+    "###\n",
+    "####\n",
+    "#####\n",
+    "```"
    ]
   },
   {
@@ -209,7 +325,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Euler: Counting Sundays\n",
+    "\n",
+    "You are given the following information, but you may prefer to do some research for yourself.\n",
+    "\n",
+    "* 1 Jan 1900 was a Monday.\n",
+    "* Thirty days has September, April, June and November.\n",
+    "* All the rest have thirty-one,\n",
+    "* Saving February alone, Which has twenty-eight, rain or shine. And on leap years, twenty-nine.\n",
+    "* A leap year occurs on any year evenly divisible by 4, but not on a century unless it is divisible by 400.\n",
+    "\n",
+    "How many Sundays fell on the first of the month during the twentieth century (1 Jan 1901 to 31 Dec 2000)?\n",
+    "\n",
+    "Utilize your knowledge in loops & conditionals to calculate this answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write solution here"
+   ]
   }
  ],
  "metadata": {
