Readjusted lab problems

--- a/phase_1/week_3/data_structures/task.ipynb
+++ b/phase_1/week_3/data_structures/task.ipynb
@@ -3,15 +3,73 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## List Indexing\n",
+    "\n",
+    "Use list-indexing & functions in order to print\n",
+    "* the first number of `items`\n",
+    "* the last number of `items`\n",
+    "* the length of `items`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = [1, 13, 1, 12, 15, 9, 7, 20, 9, 8]\n",
+    "\n",
+    "# write solution here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Searching Linearly\n",
+    "## Loop & Print\n",
     "\n",
-    "Create a for-loop that will "
+    "Create a for-loop that will print out all numbers the `items` list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = [1, 13, 1, 12, 15, 9, 7, 20, 9, 8]\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loop & Print (Evens-only)\n",
+    "\n",
+    "Create a for-loop that will print out all even numbers the `items` list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = [1, 13, 1, 12, 15, 9, 7, 20, 9, 8]\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loop & Print (Odds-only)\n",
+    "\n",
+    "Create a for-loop that will print out all odd numbers the `items` list."
    ]
   },
   {
@@ -20,7 +78,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "items = [1, 13, 1, 12, 15, 9, 7, 20, 9, 8]\n",
+    "\n",
     "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists to Dictionaries\n",
+    "\n"
    ]
   }
  ],
@@ -31,7 +106,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
