--- a/phase_1/week_3/loops_conditionals_II/task.ipynb
+++ b/phase_1/week_3/loops_conditionals_II/task.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +162,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "Fizz\n",
+      "Buzz\n"
+     ]
+    }
+   ],
    "source": [
     "# Now let's try building a program that will print Fizz, if the number is divisble by 3, Buzz, if the number is divisible by 5, \n",
     "# and FizzBuzz, if its divisible by both 5 & 3, for numbers between 1 and 100.\n",
@@ -185,16 +239,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rock, paper, scissors\n",
+    "## Conditionals Review\n",
     "\n",
-    "Create a program that simulates the game \"rock, paper, scissors.\" You will take in two inputs, one from player 1, and one from player 2, and then compare them to each other. You will code in the rules of the game using conditionals and print out who the subsequent user is.\n",
+    "Write out a conditional that will check if the value of a randomly generated number is greater than 0, 100, 200, or 300. Keep in mind that everytime you run, you will get a different number!\n",
     "\n",
-    "Expected Output\n",
+    "Example Output\n",
     "```\n",
-    "player 1: rock\n",
-    "player 2: scissors\n",
+    "Number is: 142\n",
     "\n",
-    "player 1 wins\n",
+    "Greater than 100\n",
+    "```\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "Number is: 321\n",
+    "\n",
+    "Greater than 300\n",
+    "```\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "Number is: 23\n",
+    "\n",
+    "Greater than 0\n",
     "```"
    ]
   },
@@ -204,6 +271,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create randomly generated number\n",
+    "import random\n",
+    "number = random.randint(0, 400)\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logical Operators Conditionals Review\n",
+    "\n",
+    "Write out a conditional that will check if the value of a randomly generated number is between 200 and 250, 100 and 300, or 0 and 400. Keep in mind that everytime you run, you will get a different number!\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "Number is: 142\n",
+    "\n",
+    "Number is between 100 and 300\n",
+    "```\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "Number is: 321\n",
+    "\n",
+    "0 and 400\n",
+    "```\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "Number is: 23\n",
+    "\n",
+    "0 and 400\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create randomly generated number\n",
+    "import random\n",
+    "number = random.randint(0, 400)\n",
+    "\n",
     "# write solution here"
    ]
   },
@@ -218,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,47 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write nested conditionals here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculator Pt. 2\n",
-    "\n",
-    "Continue developing your calculator from last week. This time, instead of just calculating sum and difference, ask the user which operator they want to use. Use condtionals in order to check their choice and apply the appropriate operation.\n",
-    "\n",
-    "Example Output\n",
-    "```\n",
-    "number 1: 10\n",
-    "number 2: 50\n",
-    "operation: *\n",
-    "\n",
-    "result: 500\n",
-    "```\n",
-    "\n",
-    "Example Output\n",
-    "```\n",
-    "number 1: 45\n",
-    "number 2: 15\n",
-    "operation: -\n",
-    "\n",
-    "result: 30\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write your solution here"
    ]
   },
   {
@@ -317,6 +395,42 @@
     "###\n",
     "####\n",
     "#####\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculator Pt. 2\n",
+    "\n",
+    "Continue developing your calculator from last week. This time, instead of just calculating sum and difference, ask the user which operator they want to use. Use condtionals in order to check their choice and apply the appropriate operation.\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "number 1: 10\n",
+    "number 2: 50\n",
+    "operation: *\n",
+    "\n",
+    "result: 500\n",
+    "```\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "number 1: 45\n",
+    "number 2: 15\n",
+    "operation: -\n",
+    "\n",
+    "result: 30\n",
     "```"
    ]
   },
